# ismcsolver

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: ismcsolver-config.cmake.in
docs/: annotated.html  classISMCTS_1_1Game-members.html  classISMCTS_1_1MOSolverBase-members.html  classISMCTS_1_1MOSolverBase.html  classISMCTS_1_1MOSolverBase__coll__graph.map  classISMCTS_1_1MOSolverBase__coll__graph.md5  classISMCTS_1_1MOSolver_3_01Move_00_01RootParallel_01_4-members.html  classISMCTS_1_1MOSolver_3_01Move_00_01RootParallel_01_4.html  classISMCTS_1_1MOSolver_3_01Move_00_01RootParallel_01_4__inherit__graph.map  classISMCTS_1_1MOSolver_3_01Move_00_01RootParallel_01_4__inherit__graph.md5  classISMCTS_1_1MOSolver_3_01Move_00_01Sequential_01_4-members.html  classISMCTS_1_1MOSolver_3_01Move_00_01Sequential_01_4.html  classISMCTS_1_1MOSolver_3_01Move_00_01Sequential_01_4__inherit__graph.map  classISMCTS_1_1MOSolver_3_01Move_00_01Sequential_01_4__inherit__graph.md5  classISMCTS_1_1Node.html  classISMCTS_1_1SOSolverBase-members.html  classISMCTS_1_1SOSolverBase.html  classISMCTS_1_1SOSolverBase__inherit__graph.md5  classISMCTS_1_1SOSolver_3_01Move_00_01RootParallel_01_4-members.html  classISMCTS_1_1SOSolver_3_01Move_00_01RootParallel_01_4.html  classISMCTS_1_1SOSolver_3_01Move_00_01RootParallel_01_4__inherit__graph.md5  classISMCTS_1_1SOSolver_3_01Move_00_01Sequential_01_4-members.html  classISMCTS_1_1SOSolver_3_01Move_00_01Sequential_01_4.html  classISMCTS_1_1SOSolver_3_01Move_00_01Sequential_01_4__inherit__graph.map  classISMCTS_1_1SOSolver_3_01Move_00_01Sequential_01_4__inherit__graph.md5  classISMCTS_1_1SolverBase-members.html  classISMCTS_1_1SolverBase.html  classISMCTS_1_1SolverBase__inherit__graph.md5  config.md  execution_8h_source.html  extra.css  functions.html  functions_func.html  game.md  hierarchy.html  index.html  index.md  inherit_graph_3.map  inherit_graph_4.md5  inherit_graph_6.map  (+8 more)
docs/_includes/: mathjax.html
docs/html/: annotated.html  classISMCTS_1_1EXPNode-members.html  classISMCTS_1_1EXPNode.html  classISMCTS_1_1EXPNode__coll__graph.map  classISMCTS_1_1EXPNode__coll__graph.md5  classISMCTS_1_1EXPNode__inherit__graph.map  classISMCTS_1_1EXPNode__inherit__graph.md5  classISMCTS_1_1ExecutionPolicy-members.html  classISMCTS_1_1ExecutionPolicy.html  classISMCTS_1_1ExecutionPolicy__inherit__graph.map  classISMCTS_1_1ExecutionPolicy__inherit__graph.md5  classISMCTS_1_1Game-members.html  classISMCTS_1_1Game.html  classISMCTS_1_1MOSolver-members.html  classISMCTS_1_1MOSolver.html  classISMCTS_1_1MOSolverBase-members.html  classISMCTS_1_1MOSolverBase.html  classISMCTS_1_1MOSolverBase__coll__graph.md5  classISMCTS_1_1MOSolverBase__inherit__graph.map  classISMCTS_1_1MOSolverBase__inherit__graph.md5  classISMCTS_1_1MOSolver_3_01Move_00_01RootParallel_01_4-members.html  classISMCTS_1_1MOSolver_3_01Move_00_01RootParallel_01_4.html  classISMCTS_1_1MOSolver_3_01Move_00_01RootParallel_01_4__coll__graph.map  classISMCTS_1_1MOSolver_3_01Move_00_01RootParallel_01_4__coll__graph.md5  classISMCTS_1_1MOSolver_3_01Move_00_01RootParallel_01_4__inherit__graph.md5  classISMCTS_1_1MOSolver_3_01Move_00_01Sequential_01_4-members.html  classISMCTS_1_1MOSolver_3_01Move_00_01Sequential_01_4.html  classISMCTS_1_1MOSolver_3_01Move_00_01Sequential_01_4__coll__graph.md5  classISMCTS_1_1MOSolver_3_01Move_00_01Sequential_01_4__inherit__graph.map  classISMCTS_1_1MOSolver_3_01Move_00_01Sequential_01_4__inherit__graph.md5  classISMCTS_1_1MOSolver__coll__graph.map  classISMCTS_1_1MOSolver__coll__graph.md5  classISMCTS_1_1MOSolver__inherit__graph.map  classISMCTS_1_1MOSolver__inherit__graph.md5  classISMCTS_1_1Node-members.html  classISMCTS_1_1Node.html  classISMCTS_1_1Node__coll__graph.map  classISMCTS_1_1Node__coll__graph.md5  classISMCTS_1_1Node__inherit__graph.map  classISMCTS_1_1Node__inherit__graph.md5  (+124 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  (+1 more)
docs/search/: all_a.js  classes_0.js  classes_3.js  functions_4.js  functions_5.js  related_0.js
include/: game.h  mosolver.h  node.h  solverbase.h  sosolver.h
include/ismcts/: config.h  execution.h  game.h  mosolver.h  node.h  solverbase.h  sosolver.h  treepolicy.h  ucb1.h  utility.h
include/ismcts/tree/: d_ucb.h  exp3.h  expnode.h  node.h  nodetypes.h  policies.h  policy.h  sw_ucb.h  ucb1.h  ucbnode.h
test/: CMakeLists.txt  benchmark.cpp  card.h  defaultmosolver.h  game.cpp  game.h  gametest.cpp  knockoutwhist.cpp  knockoutwhist.h  main.cpp  mocksolvers.h  nodetest.cpp  policytest.cpp  solvertest.cpp
test/common/: card.h  catch.hpp  goofspiel.cpp  goofspiel.h  knockoutwhist.cpp  knockoutwhist.h  mnkgame.cpp  mnkgame.h  phantommnkgame.cpp  phantommnkgame.h  tictactoe.cpp  tictactoe.h  utility.h
